fix color preview input overspill and add p element styling

--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,7 @@ input {
 #reset {
     float: left;
 }
+
+input {
+    width: 100%;
+}
